--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 ## -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
-## Hyrax-1.16.8
-## olfs-1.18.12
+## olfs-1.18.13
+## hyrax-1.16.8
 ##
 
 2022-07-22  The-Robot-Travis  <npotter@opendap.org>
@@ -57,8 +57,8 @@
 	Setting BES timeOut to 55 seconds (thanks CloudFront) for the NGAP deployment
 
 ## -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
-## Hyrax-1.16.7
-## olfs-1.18.11
+## olfs-1.18.12
+## hyrax-1.16.7
 ##
 
 2022-07-06  ndp-opendap  <ndp@opendap.org>
@@ -82,8 +82,8 @@
 	bes-3.20.10-503 2022-07-05T17:18:27+0000 - Triggering OLFS build for snapshots.
 
 ## -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
-## Hyrax-1.16.6
 ## olfs-1.18.11
+## hyrax-1.16.6
 ##
 
 2022-07-05  The-Robot-Travis  <npotter@opendap.org>
@@ -1047,7 +1047,7 @@
 	for snapshots.
 
 ## -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
-## Hyrax-1.16.5
+## hyrax-1.16.5
 ## olfs-1.18.10
 ##
 
